<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorRegisterDetails">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="Doctor Registrations"
        android:textColor="#0A67AF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editDName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/btnAddDoctorDetails"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/p_save"
        android:textColor="#F3EFEF"
        android:textSize="18sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editDNIC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/p_nic"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editDoctorRegistrationNumber"
        app:layout_constraintEnd_toEndOf="@+id/editDoctorRegistrationNumber"
        app:layout_constraintStart_toStartOf="@+id/editDoctorRegistrationNumber" />

    <EditText
        android:id="@+id/editDMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/p_mobile"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editDNIC"
        app:layout_constraintEnd_toEndOf="@+id/editDNIC"
        app:layout_constraintStart_toStartOf="@+id/editDNIC" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="355dp"
        android:layout_height="104dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/editDMobile"
        app:layout_constraintEnd_toEndOf="@+id/editDMobile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editDMobile">

        <RadioButton
            android:id="@+id/radioDMale"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/p_male" />

        <RadioButton
            android:id="@+id/radioDFeMale"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:text="@string/p_female" />
    </RadioGroup>

    <EditText
        android:id="@+id/editDAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/p_addtrss"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup1"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioGroup1" />

    <EditText
        android:id="@+id/editDName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/p_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editDAddress"
        app:layout_constraintEnd_toEndOf="@+id/editDAddress"
        app:layout_constraintStart_toStartOf="@+id/editDAddress" />

    <EditText
        android:id="@+id/editDoctorRegistrationNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/d_RegNumber"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnAddDoctorDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>