<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRegisterDetails">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Patient Registration"
        android:textColor="#2196F3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddDetails"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:text="@string/p_save"
        android:textColor="#F3EFEF"
        android:textSize="18sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editNIC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/p_nic"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editPEmails"
        app:layout_constraintEnd_toEndOf="@+id/editPEmails"
        app:layout_constraintStart_toStartOf="@+id/editPEmails" />

    <EditText
        android:id="@+id/editMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/p_mobile"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editNIC"
        app:layout_constraintEnd_toEndOf="@+id/editNIC"
        app:layout_constraintStart_toStartOf="@+id/editNIC" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="355dp"
        android:layout_height="104dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/editMobile"
        app:layout_constraintEnd_toEndOf="@+id/editMobile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editMobile">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/p_male" />

        <RadioButton
            android:id="@+id/radioFeMale"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:text="@string/p_female" />
    </RadioGroup>

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/p_addtrss"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/p_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editAddress"
        app:layout_constraintEnd_toEndOf="@+id/editAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.897" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editConfPassword"
        app:layout_constraintEnd_toEndOf="@+id/editConfPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editConfPassword" />

    <EditText
        android:id="@+id/editConfPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="Enter Confirm Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnAddDetails"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPEmails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>