<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorLogin">

    <Button
        android:id="@+id/btnDoctorLogin"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="88dp"
        android:text="@string/doctor_login"
        android:textSize="24sp"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editDoctorPasswordLog"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnDoctorLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/doctor_Password"
        android:textColor="#6C6A6A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editDoctorPasswordLog"
        app:layout_constraintEnd_toEndOf="@+id/editDoctorPasswordLog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editDoctorPasswordLog" />

    <EditText
        android:id="@+id/editDoctorEmailLog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/editDoctorPasswordLog"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/editDoctorPasswordLog" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/doctor_Username"
        android:textColor="#6E6C6C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editDoctorEmailLog"
        app:layout_constraintEnd_toEndOf="@+id/editDoctorEmailLog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editDoctorEmailLog" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/doctor_log"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account.. Click Here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnDoctorLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnDoctorLogin"
        app:layout_constraintVertical_bias="0.463" />

</androidx.constraintlayout.widget.ConstraintLayout>