<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnMainPatient"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="80dp"
        android:background="#FFFFFF"
        android:text="@string/patient"
        android:textColor="#F3EEEE"
        android:textSize="24sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMailDoctor"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:background="#070707"
        android:text="@string/doctor"
        android:textSize="24sp"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/btnMainPatient"
        app:layout_constraintEnd_toEndOf="@+id/btnMainPatient"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnMainPatient" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/who"
        android:textColor="#494545"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMailDoctor"
        app:layout_constraintStart_toStartOf="@+id/btnMailDoctor" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="264dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/b" />

</androidx.constraintlayout.widget.ConstraintLayout>