<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRegistration">

    <Button
        android:id="@+id/btnPatientRegister"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:text="@string/p_reg"
        android:textSize="18sp"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPatientRegRePassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnPatientRegister"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/p_repass"
        android:textColor="#757777"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editPatientRegRePassword"
        app:layout_constraintEnd_toEndOf="@+id/editPatientRegRePassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editPatientRegRePassword" />

    <EditText
        android:id="@+id/editPatientRegPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/editPatientRegRePassword"
        app:layout_constraintStart_toStartOf="@+id/editPatientRegRePassword" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/p_pass"
        android:textColor="#787A7A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editPatientRegPassword"
        app:layout_constraintEnd_toEndOf="@+id/editPatientRegPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editPatientRegPassword" />

    <EditText
        android:id="@+id/editPatientRegEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/editPatientRegPassword"
        app:layout_constraintStart_toStartOf="@+id/editPatientRegPassword" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/p_uname"
        android:textColor="#686A6A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editPatientRegEmail"
        app:layout_constraintEnd_toEndOf="@+id/editPatientRegEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editPatientRegEmail" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="Patient Registration"
        android:textColor="#FFC107"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textPatientLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="Do you have Account.. Click Here to Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPatientRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>